RESOLVED FIXED116868
changing border size on rows with border-collapse not redrawing
https://bugs.webkit.org/show_bug.cgi?id=116868
Summary changing border size on rows with border-collapse not redrawing
Josh
Reported 2013-05-28 07:28:50 PDT
Created attachment 203051 [details] screenshot when changing border size of cells in a table that has border-collapse:collapse; (with javascript or hover) the extra lines are not redrawing.. see attached test
Attachments
screenshot (20.21 KB, image/jpeg)
2013-05-28 07:28 PDT, Josh
no flags
screenshot extreme example (21.69 KB, image/png)
2013-05-28 07:29 PDT, Josh
no flags
test case (818 bytes, text/html)
2013-05-28 07:31 PDT, Josh
no flags
table-row border test case (989 bytes, text/html)
2021-09-07 16:00 PDT, Dan Richman
no flags
Patch (4.23 KB, patch)
2021-09-09 19:48 PDT, alan
no flags
Patch (7.41 KB, patch)
2021-09-09 21:14 PDT, alan
ews-feeder: commit-queue-
[fast-cq]Rebaseline patch (1.44 KB, patch)
2021-09-10 08:57 PDT, alan
no flags
Josh
Comment 1 2013-05-28 07:29:55 PDT
Created attachment 203053 [details] screenshot extreme example
Josh
Comment 2 2013-05-28 07:31:25 PDT
Created attachment 203054 [details] test case hover over multiple cells to see the effect.
Dan Richman
Comment 3 2021-09-07 16:00:53 PDT
Created attachment 437568 [details] table-row border test case The original test case used border on the table cells and is no longer reproducible for me in STP Release 131 (Safari 15.0, WebKit 17612.2.2). However, I am able to reproduce the issue by moving the hover border style to the table-row. New test case for table-row border is attached.
Radar WebKit Bug Importer
Comment 4 2021-09-07 16:11:57 PDT
alan
Comment 5 2021-09-09 19:48:35 PDT
alan
Comment 6 2021-09-09 21:14:53 PDT
EWS
Comment 7 2021-09-10 06:41:50 PDT
Committed r282266 (241544@main): <https://commits.webkit.org/241544@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 437834 [details].
alan
Comment 8 2021-09-10 08:57:04 PDT
Created attachment 437876 [details] [fast-cq]Rebaseline patch
alan
Comment 9 2021-09-10 08:57:17 PDT
Rebaselining
EWS
Comment 10 2021-09-10 09:01:44 PDT
Committed r282271 (241549@main): <https://commits.webkit.org/241549@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 437876 [details].
Note You need to log in before you can comment on or make changes to this bug.