changing border size on rows with border-collapse not redrawing https://bugs.webkit.org/show_bug.cgi?id=116868 <rdar://problem/82844412>

Reviewed by Simon Fraser.

Source/WebCore:

Cells in adjacent rows share the same collapsed border.
When this collapsed border width changes on a row, the cells at the adjacent rows need to know about it too so that
they can update their size accordingly.

Test: fast/table/collapsed-border-width-change-on-row.html

* rendering/RenderTableRow.cpp:
(WebCore::RenderTableRow::styleDidChange):

LayoutTests:

* fast/table/collapsed-border-width-change-on-row-expected.html: Added.
* fast/table/collapsed-border-width-change-on-row.html: Added.


Canonical link: https://commits.webkit.org/241544@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282266 268f45cc-cd09-0410-ab3c-d52691b4dbfc